# Calculator-PySide

./: .gitignore  README.md  pyproject.toml
calculator/: main.py
calculator_pyside/: __init__.py  calculator.py  main.py
src/: __init__.py  calculator.py  main.py
tests/: test_calculator.py
