[tool.poetry]
name = "calculator_pyside"
version = "0.1.0"
description = "A simple calculator made with PySide6."
authors = ["Yannick Clifford <yannickbaudrazdev@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
start = "calculator_pyside.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
